[gd_scene load_steps=8 format=3 uid="uid://d1xvinc7ybh2g"]

[ext_resource type="Script" uid="uid://tdytfmt4y4lk" path="res://pescar_minigame.gd" id="1_dty0n"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_snmqf"]
size = Vector2(800, 40)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_o3lth"]
size = Vector2(80, 40)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jaeow"]
size = Vector2(160, 40)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_drxxn"]
size = Vector2(800, 20)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8g60o"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_w870f"]

[node name="PescarMinigame" type="CanvasLayer"]
script = ExtResource("1_dty0n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FondoBarra" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 40.0
texture = SubResource("PlaceholderTexture2D_snmqf")

[node name="ZonaPez" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 40.0
texture = SubResource("PlaceholderTexture2D_o3lth")

[node name="ZonaJugador" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 40.0
texture = SubResource("PlaceholderTexture2D_jaeow")

[node name="ProgresoBarra" type="TextureProgressBar" parent="."]
offset_left = 2.0
offset_top = 87.0
offset_right = 802.0
offset_bottom = 127.0
texture_under = SubResource("PlaceholderTexture2D_drxxn")
texture_over = SubResource("PlaceholderTexture2D_8g60o")
texture_progress = SubResource("PlaceholderTexture2D_w870f")

[node name="Timer" type="Timer" parent="ProgresoBarra"]
